# qqr

./: .bumpversion.cfg  .coveragerc  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
exp/classifier/: cv_vgg_model.ipynb  cv_vgg_model_test.ipynb
exp/datasets/: Dataset_Creation.ipynb
exp/deblur/: Deblur.py  deblur.ipynb
exp/skew/: Deskew.ipynb  skew.py
src/qqr/: __init__.py  classifier.py  commandline.py  deblur.py  decoder.py  skew.py  version.py
tests/: test_cli.py  test_import.py
