[metadata]
name = qqr
version = 0.2.0
description = A blazingly fast QR code restoration library for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weeebdev/qqr
author = Author Name
author_email = author.name@email.com
license = Apache
license_files = LICENSE
keywords = python template
project_urls =
    Documentation = https://weeebdev.github.io/qqr/
    Source = https://github.com/weeebdev/qqr
    Tracker = https://github.com/weeebdev/qqr/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    click>=6.0

[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    qqr = qqr.commandline:qqr

[build_sphinx]
project = qqr
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
